fixed 'what is coffeescript' alignment for firefox

--- a/src/main/webapp/css/coffee-demo.css
+++ b/src/main/webapp/css/coffee-demo.css
@@ -798,11 +798,11 @@ a:focus {
 }
 
 #what {
-  width: 700px;
+  width: 730px;
 }
 
 #what span {
-  padding-left: 275px;
+  padding-left: 310px;
 }
 
 #call-js {
